Subida de lo relizado tras perdida
Actualización posperdida
